fix: tighten bottom spacing on floated and centered images

--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -405,8 +405,15 @@
   text-align: center;
   color: var(--text-dim);
   font-size: 0.85rem;
-  margin-top: 8px;
-  line-height: 1.4;
+  margin-top: 6px;
+  line-height: 1.3;
+}
+
+/* Tighter captions on floated/centered images */
+.post-content .img-left figcaption,
+.post-content .img-right figcaption {
+  font-size: 0.8rem;
+  margin-top: 4px;
 }
 
 /* Full width */
@@ -418,14 +425,14 @@
 /* Centered block */
 .post-content .img-center {
   width: 80%;
-  margin: 2em auto;
+  margin: 1em auto;
 }
 
 /* Float left */
 .post-content .img-left {
   float: left;
   width: 40%;
-  margin: 0.25em 1.75em 0.5em 0;
+  margin: 0.25em 1.5em 0.25em 0;
   clear: left;
 }
 
@@ -433,7 +440,7 @@
 .post-content .img-right {
   float: right;
   width: 40%;
-  margin: 0.25em 0 0.5em 1.75em;
+  margin: 0.25em 0 0.25em 1.5em;
   clear: right;
 }
 
